# bot-paywall

./: .env.bak  .env.example  .gitignore  APTOS_SDK_FIX.md  ARCHITECTURE.md  CHANGES_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MOVEMENT_ACCOUNT_SETUP.md  PAYMENT_SYSTEM_STATUS.md  QUICK_REFERENCE.md  README.md  REAL_TRANSACTIONS_SUCCESS.md  REMOVED_MOCK_TRANSACTIONS.md  access-server.js  access-server.test.js  active-timers-state.test.js  aptos-integration.test.js  aptos-integration.test.js.bak  cloudflare-auth.test.js  cloudflare-rule-management.test.js  create-whitelist.sh  delete-whitelist.sh  ip-detection.test.js  jest.config.js  jest.setup.js  logging-completeness.test.js  manage-webscraper-access.sh  package-lock.json  package.json  payment-error-handling.test.js  payment-verification.test.js  payment-verification.test.js.bak  pnpm-lock.yaml  success-response-format.test.js  test-cf-token.js  test-webscraper.sh  test-whitelist-flow.js  timer-lifecycle.test.js
botpaywall-sdk/: README.md  __init__.py  pyproject.toml
botpaywall-sdk/botpaywall/: __init__.py  client.py  config.py  payment.py  utils.py
botpaywall-sdk/botpaywall.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
botpaywall-sdk/examples/: simple_scraper.py
botpaywall-sdk/examples/scraper/: .gitignore  README.md  main.py
botpaywall-sdk/examples/scraper-with-sdk/: .env.example  README.md  main.py  scraper.py
cloudflare-worker/: .env.bak  .env.example  DUMMY_TRANSACTION_DEPLOYMENT.md  README.deploy.md  README.md  debug-bot-detection.js  deploy_with_env.sh  jest.config.js  jest.setup.js  (+16 more)
(+376 files in other folders)
