[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "botpaywall"
version = "0.1.0"
description = "SDK for integrating with bot-paywall x402 payment protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Bot-Paywall Team"}
]
keywords = ["bot", "paywall", "x402", "payment", "scraper", "sdk"]
dependencies = [
    "requests>=2.31.0",
    "aptos-sdk>=0.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
where = ["."]
